<resources>
    <string name="hot_play_name">正在热播</string>
    <string name="new_play_name">即将上映</string>
    <string name="April">4月</string>
    <string name="August">8月</string>
    <string name="December">12月</string>
    <string name="February">2月</string>
    <string name="Janurary">1月</string>
    <string name="July">7月</string>
    <string name="June">6月</string>
    <string name="ListLiveTittle">正在直播</string>
    <string name="ListPreviewTittle">热门预告</string>
    <string name="ListRecordTittle">精彩回看</string>
    <string name="LiveButtonText">围观</string>
    <string name="March">3月</string>
    <string name="May">5月</string>
    <string name="November">11月</string>
    <string name="October">10月</string>
    <string name="Player_error_f100">连接服务器异常，请您观看其他视频。</string>
    <string name="Player_error_timeout">网络不太给力哦,如需观看,请重试。</string>
    <string name="PreviewButtonText">预约</string>
    <string name="September">9月</string>
    <string name="SubCountText">人围观</string>
    <string name="SubCountlookText">人想看</string>
    <string name="account_bind_other_tag">%1$s账号</string>
    <string name="account_bind_top_tag">正在使用%1$s账号登录优酷</string>
    <string name="account_changed">帐号已发生变更，请重新登录后再试</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_picker_cover">选择封面</string>
    <string name="activity_title_upload_page">完善视频信息</string>
    <string name="add_collection_to_favorite_succeed">收藏成功，可在个人中心查看</string>
    <string name="add_fail">视频添加失败</string>
    <string name="add_success">添加成功</string>
    <string name="add_to_collection_succeed">已添加至播单</string>
    <string name="add_to_collection_success">已添加至播单</string>
    <string name="add_video_btn">添加视频></string>
    <string name="add_video_btn_n">添加视频</string>
    <string name="adsdk_xunfei_app_id">56605042</string>
    <string name="advertisement">广告</string>
    <string name="airplay_input_password_text">请输入密码</string>
    <string name="alarm_comment">举报</string>
    <string name="alarm_toast">已举报，我们审核后处理</string>
    <string name="album_move_to_toast">视频已在此视频夹中</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alipay_error_network_error">网络不给力，请稍后再试。</string>
    <string name="alipay_error_order_pay_fail">支付失败，请重新支付</string>
    <string name="alipay_error_pay_cancel">支付中断，请重新支付</string>
    <string name="alipay_error_pay_process">支付结果处理中。</string>
    <string name="alipay_login_success">已通过支付宝账号登录到您的优酷账号%1$s</string>
    <string name="alipay_request_error">服务器开小差了，请您稍后再试。</string>
    <string name="alisdk_message_10000_action">请检查对应名称模块的库文件是否包含在当前开发应用的依赖库里面</string>
    <string name="alisdk_message_10000_message">JS Bridge 载入器未找到名称为 {0} 的模块</string>
    <string name="alisdk_message_10000_name">JS_BRIDGE_MODULE_NOT_FOUND</string>
    <string name="alisdk_message_10000_type">E</string>
    <string name="alisdk_message_10002_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 AlibabaSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="alisdk_message_10002_message">SDK 初始化出错，错误信息为 {0}</string>
    <string name="alisdk_message_10002_name">INIT_EXCEPTION</string>
    <string name="alisdk_message_10002_type">E</string>
    <string name="alisdk_message_10003_action" />
    <string name="alisdk_message_10003_message">当前操作已经取消</string>
    <string name="alisdk_message_10003_name">USER_CANCEL</string>
    <string name="alisdk_message_10003_type">I</string>
    <string name="alisdk_message_10004_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10004_message">请求 INIT 服务器发生错误，错误消息为 {0}</string>
    <string name="alisdk_message_10004_name">REQUEST_INIT_SERVER_EXCEPTION</string>
    <string name="alisdk_message_10004_type">E</string>
    <string name="alisdk_message_10005_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10005_message">消息解密发生错误，错误消息为 {0}</string>
    <string name="alisdk_message_10005_name">RSA_DECRYPT_EXCEPTION</string>
    <string name="alisdk_message_10005_type">E</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_10010_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 AlibabaSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="alisdk_message_10010_message">发生错误，消息为 {0}, 请使用 LogCat 查看更多细节</string>
    <string name="alisdk_message_10010_name">GENERIC_SYSTEM_ERROR</string>
    <string name="alisdk_message_10010_type">E</string>
    <string name="alisdk_message_10011_action" />
    <string name="alisdk_message_10011_message">当前用户未登录</string>
    <string name="alisdk_message_10011_name">USER_ALREADY_LOGOUT</string>
    <string name="alisdk_message_10011_type">W</string>
    <string name="alisdk_message_10012_action">请在使用 SDK 业务功能之前确保已经调用 AlibabaSDK.asyncInit 方法并接收到初始化成功的回调</string>
    <string name="alisdk_message_10012_message">SDK 尚未被初始化</string>
    <string name="alisdk_message_10012_name">SDK_NOT_INIT</string>
    <string name="alisdk_message_10012_type">E</string>
    <string name="alisdk_message_10014_action">请检查网络设置后，并重试当前操作</string>
    <string name="alisdk_message_10014_message">当前网络不可用</string>
    <string name="alisdk_message_10014_name">NETWORK_NOT_AVAILABLE</string>
    <string name="alisdk_message_10014_type">E</string>
    <string name="alisdk_message_10015_action" />
    <string name="alisdk_message_10015_message">退出登录</string>
    <string name="alisdk_message_10015_name">USER_LOGOUT</string>
    <string name="alisdk_message_10015_type">I</string>
    <string name="alisdk_message_10016_action">请在开发环境中运行应用，检查 logcat 输出的异常信息</string>
    <string name="alisdk_message_10016_message">安全模块初始化失败，错误消息为 {0}</string>
    <string name="alisdk_message_10016_type">E</string>
    <string name="alisdk_message_10022_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 AlibabaSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="alisdk_message_10022_message">SDK 组件 {0} 启动出错，错误消息为 {1}</string>
    <string name="alisdk_message_10022_name">PLUGIN_INIT_FAILED</string>
    <string name="alisdk_message_10022_type">E</string>
    <string name="alisdk_message_100_action" />
    <string name="alisdk_message_100_message">操作成功</string>
    <string name="alisdk_message_100_name">ACTION_SUCCESS</string>
    <string name="alisdk_message_100_type">I</string>
    <string name="alisdk_message_101_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_101_message">会话刷新出错，错误消息为 {0}</string>
    <string name="alisdk_message_101_name">REFRESH_SID_EXCEPTION</string>
    <string name="alisdk_message_101_type">W</string>
    <string name="alisdk_message_12_action">请检查所依赖的 SDK 项目，或若是手动拷贝 SDK 至当前开发应用所在项目，请检查是否漏拷文件</string>
    <string name="alisdk_message_12_message">在目录 {0} 未找到文件 {1}</string>
    <string name="alisdk_message_12_name">RESOURCE_NOT_FOUND</string>
    <string name="alisdk_message_12_type">E</string>
    <string name="alisdk_message_13_action">请检查所依赖的 SDK 项目，或若是手动拷贝 SDK 至当前开发应用所在项目，请检查是否漏拷文件，或重新至官方网站下载 SDK</string>
    <string name="alisdk_message_13_message">未能在下载 SDK 中找到指定插件 {0}</string>
    <string name="alisdk_message_13_name">PLUGIN_NOT_FOUND</string>
    <string name="alisdk_message_13_type">E</string>
    <string name="alisdk_message_14_action">当前输入参数不应为 null 或者空，请调整输入参数</string>
    <string name="alisdk_message_14_message">输入参数 {0} 为 null 或者为空</string>
    <string name="alisdk_message_14_name">NULL_OR_EMPTY_PARAMETER</string>
    <string name="alisdk_message_14_type">E</string>
    <string name="alisdk_message_15_action" />
    <string name="alisdk_message_15_message">{0} 模块 请求服务端出错，错误消息为 {1}</string>
    <string name="alisdk_message_15_name">SERVER_REQUEST_FAILED</string>
    <string name="alisdk_message_15_type">E</string>
    <string name="alisdk_message_16_action">请在 IDE 中检查类是否存在，或者是否因为代码混淆没有配置 SDK 对应的 -keep 选项，具体配置请参照在线网站</string>
    <string name="alisdk_message_16_message">运行时不能载入类 {0}</string>
    <string name="alisdk_message_16_name">CLASS_NOT_FOUND_ERROR</string>
    <string name="alisdk_message_16_type">E</string>
    <string name="alisdk_message_17_action">请检查 SDK 是否初始化成功，或者如果 APK 采取特定的打包方式 (e.g. multi-dex), 确保百川 SDK 的包含的 jar 文件中的 assets/ 文件包含在最终的 APK 中</string>
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_1_action">请检查所依赖的 SDK 项目，或若是手动拷贝 SDK 至当前开发应用所在项目，请检查是否漏拷文件 res/values 下文件</string>
    <string name="alisdk_message_1_message">未在消息文件中找到 id 为 {0} 的消息</string>
    <string name="alisdk_message_1_name">MESSAGE_NOT_FOUND_ERROR</string>
    <string name="alisdk_message_1_type">E</string>
    <string name="alisdk_message_2_action">请检查所依赖的 SDK 项目，或若是手动拷贝 SDK 至当前开发应用所在项目，请检查是否漏拷文件 res/values 下文件</string>
    <string name="alisdk_message_2_message">检索消息时发生如下错误 {0}</string>
    <string name="alisdk_message_2_name">MESSAGE_UNKNOWN_ERROR</string>
    <string name="alisdk_message_2_type">E</string>
    <string name="alisdk_message_651_action">请使用相关工具 (e.g.taobao.openiid.get API) 对原始参数进行加密</string>
    <string name="alisdk_message_651_message">未能使用当前应用的信息对参数进行解密</string>
    <string name="alisdk_message_651_name">INVALID_OPEN_ITEM_ID</string>
    <string name="alisdk_message_651_type">E</string>
    <string name="comment_add_alert_cancel">否</string>
    <string name="comment_add_alert_yes">是</string>
    <string name="detail_pay_success">交易成功!</string>
    <string name="detail_pay_watch">是否马上观看？</string>
    <string name="detail_share">分享</string>
    <string name="game_action_bar_icon_desc_download">下载管理</string>
    <string name="game_action_bar_icon_desc_personal">个人中心</string>
    <string name="game_action_bar_icon_desc_present">礼包</string>
    <string name="game_action_bar_icon_desc_search">搜索</string>
    <string name="game_download_count">%s人安装</string>
    <string name="game_name">Minecraft-Pocket Edition</string>
    <string name="game_present_count">礼包总数：%s</string>
    <string name="game_size">%s</string>
    <string name="hd_exist_account">已有账号</string>
    <string name="hd_login">登录</string>
    <string name="hd_no_subscribe">订阅频道吧，孤独修炼已久，略寂寞...</string>
    <string name="hd_now">现在</string>
    <string name="hd_save_subscribe">，你的订阅永久保存</string>
    <string name="hd_timeline_look_personal">看看下面的推荐↓或</string>
    <string name="infoCamera0">俯视角度</string>
    <string name="infoCamera1">跟拍机位</string>
    <string name="infoCamera2">360度机位</string>
    <string name="infoCameraPosition">"机位
选择"</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="menu_cache">下载</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_gamecenter">游戏</string>
    <string name="menu_rating">评分</string>
    <string name="menu_recommend">应用</string>
    <string name="play_history">播放历史</string>
    <string name="refresh">刷新</string>
    <string name="saosao">扫一扫</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="str_icon">这是一个icon</string>
    <string name="webview_gotoweb">跳转</string>
    <string name="webview_refresh">刷新</string>
</resources>