<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@id/menu_search"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/actionbar_search_selector"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/search" />
    <item
        android:id="@id/menu_history"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/actionbar_history_selector"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/play_history" />
    <item
        android:id="@id/menu_download"
        tools:ignore="AppCompatResource"
        android:orderInCategory="12"
        android:showAsAction="never"
        android:title="@string/menu_cache" />
    <item
        android:id="@id/menu_saosao"
        tools:ignore="AppCompatResource"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/saosao" />
    <item
        android:id="@id/menu_refresh"
        tools:ignore="AppCompatResource"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/refresh"
        android:visible="false" />
    <item
        android:id="@id/menu_login"
        tools:ignore="AppCompatResource"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/login" />
    <item
        android:id="@id/menu_setting"
        tools:ignore="AppCompatResource"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/settings"
        android:visible="false" />
    <item
        android:id="@id/menu_feedback"
        tools:ignore="AppCompatResource"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/menu_feedback" />
    <item
        android:id="@id/menu_survey"
        tools:ignore="AppCompatResource"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:title="问卷调查" />
    <item
        tools:ignore="AppCompatResource"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="常用设置" />
    <item
        android:id="@id/menu_rating"
        tools:ignore="AppCompatResource"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:title="@string/menu_rating" />
    <item
        android:id="@id/menu_recommend"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/actionbar_recommend_selector"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_recommend" />
    <item
        android:id="@id/menu_logout"
        tools:ignore="AppCompatResource"
        android:orderInCategory="13"
        android:showAsAction="never"
        android:title="@string/logout"
        android:visible="false" />
</menu>