<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@id/menu_search"
        android:icon="@drawable/actionbar_search_selector"
        android:iconifiedByDefault="true"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/search"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_gamecenter"
        android:icon="@drawable/actionbar_game_red_selector"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_gamecenter"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_recommend"
        android:icon="@drawable/actionbar_recommend_selector"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_recommend"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_share"
        android:icon="@drawable/actionbar_detail_share"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/detail_share"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_download"
        android:icon="@drawable/actionbar_download_selector"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/menu_cache"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_history"
        android:icon="@drawable/actionbar_history_selector"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/play_history"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_saosao"
        android:icon="@drawable/actionbar_saosao_selector"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/saosao"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_refresh"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/refresh"
        android:visible="false"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_login"
        android:icon="@drawable/actionbar_login_selector"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/login"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_setting"
        android:icon="@drawable/actionbar_setting_selector"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:title="常用设置"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_feedback"
        android:icon="@drawable/actionbar_feedback_selector"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/menu_feedback"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_rating"
        android:icon="@drawable/actionbar_rating_selector"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:title="@string/menu_rating"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_logout"
        android:icon="@drawable/actionbar_logout_selector"
        android:orderInCategory="12"
        android:showAsAction="never"
        android:title="@string/logout"
        android:visible="false"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_refreshweb"
        android:icon="@drawable/webview_refresh_normal"
        android:orderInCategory="13"
        android:showAsAction="never"
        android:title="@string/webview_refresh"
        android:visible="false"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@id/menu_gotoweb"
        android:icon="@drawable/webview_jump_normal"
        android:orderInCategory="14"
        android:showAsAction="never"
        android:title="@string/webview_gotoweb"
        android:visible="false"
        tools:ignore="AppCompatResource" />
</menu>