<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/infoCameraPosition" android:lines="2" />
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/infoCamera0" android:width="100.0dip" />
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/infoCamera1" android:width="100.0dip" />
    <TextView android:textSize="20.0dip" android:textColor="#ffffffff" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/infoCamera2" android:width="100.0dip" />
</LinearLayout>