<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/nologin_container" android:paddingTop="@dimen/hd_timeline_no_subscribe_top" android:paddingBottom="@dimen/hd_timeline_no_subscribe_top" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/hd_unique_broadcast_title_size" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/hd_timeline_no_subscribe_bottom" android:text="@string/hd_no_subscribe" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/before" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_timeline_look_personal" />
            <TextView android:textSize="@dimen/hd_subscribe_tab_bar_size" android:textColor="@color/hd_nologin_btn_text" android:id="@id/login_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_login" />
            <TextView android:id="@id/after" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_exist_account" />
        </LinearLayout>
    </LinearLayout>
    <include android:id="@id/nologin_container_1" layout="@layout/hd_fragment_channel_nologinview" />
</LinearLayout>