<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:paddingTop="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/hd_subscribe_tab_bar_size" android:textColor="@color/hd_nologin_text" android:id="@id/before" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_now" />
    <TextView android:textSize="@dimen/hd_subscribe_tab_bar_size" android:textColor="@color/hd_nologin_btn_text" android:id="@id/login_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_login" />
    <TextView android:textSize="@dimen/hd_subscribe_tab_bar_size" android:textColor="@color/hd_nologin_text" android:id="@id/after" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hd_save_subscribe" />
</LinearLayout>