<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/game_present_card_title" android:background="#ffffffff" android:paddingLeft="@dimen/detail_gameinfo_padding" android:paddingRight="@dimen/detail_gameinfo_padding" android:layout_width="fill_parent" android:layout_height="@dimen/gamelist_item_height" android:layout_marginTop="@dimen/game_card_margin" android:layout_marginBottom="@dimen/game_card_margin"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/game_icon" android:layout_width="@dimen/game_detail_top_icon_width" android:layout_height="@dimen/game_detail_top_icon_width" android:src="@drawable/game_list_item_default" android:scaleType="fitXY" android:layout_centerVertical="true" android:contentDescription="@string/str_icon" />
        <TextView android:textSize="@dimen/game_name_text_size" android:textColor="#ff000000" android:ellipsize="end" android:id="@id/game_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/game_name_margin_left" android:layout_marginBottom="@dimen/game_name_margin_bottom" android:text="@string/game_name" android:singleLine="true" android:layout_toRightOf="@id/game_icon" android:layout_alignTop="@id/game_icon" />
        <TextView android:textSize="@dimen/game_desc_text_size" android:textColor="#ff888888" android:id="@id/game_size" android:layout_width="@dimen/game_size_width" android:layout_height="@dimen/game_size_height" android:text="@string/game_size" android:layout_below="@id/game_name" android:layout_alignLeft="@id/game_name" />
        <TextView android:textSize="@dimen/game_desc_text_size" android:textColor="#ff888888" android:ellipsize="end" android:id="@id/game_download_count" android:layout_width="wrap_content" android:layout_height="@dimen/game_download_count_height" android:text="@string/game_download_count" android:singleLine="true" android:layout_toRightOf="@id/game_size" android:layout_alignBaseline="@id/game_size" />
        <TextView android:textSize="@dimen/game_desc_text_size" android:textColor="#ff888888" android:id="@id/game_present_count" android:layout_width="wrap_content" android:layout_height="@dimen/game_download_count_height" android:text="@string/game_present_count" android:layout_below="@id/game_size" android:layout_alignLeft="@id/game_name" />
    </RelativeLayout>
</LinearLayout>